css alignment fix

--- a/src/components/menu-item/menu-item.component.scss
+++ b/src/components/menu-item/menu-item.component.scss
@@ -1,15 +1,13 @@
 .menu-item {
-  min-width: 40%;
+  min-width: 30%;
   height: 240px;
-  flex: 1 1 1 auto;
+  flex: 1 1 auto;
   display: flex;
   align-items: center;
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
-  background-size: cover;
-  background-position: center;
 
   &:hover {
     cursor: pointer;
@@ -20,7 +18,7 @@
     }
 
     & .content {
-      opacity: 0.9;
+      opacity: 0.95;
     }
   }
 
@@ -39,7 +37,8 @@
   .background-image {
     width: 100%;
     height: 100%;
-    
+    background-size: cover;
+    background-position: center;
   }
 
   .content {
@@ -52,7 +51,7 @@
     border: 1px solid black;
     background-color: white;
     opacity: 0.7;
-    // position: absolute;
+    position: absolute;
 
     .title {
       font-weight: bold;
