--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -1,6 +1,6 @@
 .homepage {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
   padding: 20px auto;
 }
